updated version with surya OCR

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,30 @@
+# NCTB Physics Question Generator - Dependencies
+
+# PDF Processing
 pdfplumber>=0.10.0
+
+# OCR Support
 pdf2image>=1.16.0
-pytesseract>=0.3.10
 Pillow>=10.0.0
+surya-ocr>=0.4.0
+
+# Fallback OCR (optional - Tesseract)
+# pytesseract>=0.3.10
+
+# Vector Database
 chromadb>=0.4.0
+
+# OpenAI API (for embeddings and LLM)
 openai>=1.0.0
+
+# Anthropic API (optional - for using Claude)
 anthropic>=0.18.0
+
+# Web App
 streamlit>=1.28.0
+
+# PDF Generation
 reportlab>=4.0.0
+
+# Utilities
 python-dotenv>=1.0.0
