--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-echo "pdfplumber>=0.10.0
+pdfplumber>=0.10.0
 pdf2image>=1.16.0
 Pillow>=10.0.0
 chromadb>=0.4.0
@@ -6,4 +6,4 @@ openai>=1.0.0
 anthropic>=0.18.0
 streamlit>=1.28.0
 reportlab>=4.0.0
-python-dotenv>=1.0.0" > requirements.txt
+python-dotenv>=1.0.0
